# hockey-analytics2.0

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  INSTALLATION_FACILE.md  LICENSE  README.md  README_FR.md  ROADMAP.md  SOURCES.md  package-lock.json  package.json  pyproject.toml
.claude/: settings.local.json
.claude/skills/: README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  new-connector.yml  new-skill.yml
.github/workflows/: claude-pr-review.yml  connector-health.yml  tests.yml
docs/en/: data-model.md  game-context-files.md  getting-started.md
docs/fr/: data-model.md  game-context-files.md  getting-started.md
examples/cohort_studies/: build_cohort_study_post.js  warrior_split_study.numbers.json  warrior_split_study_EN.docx  warrior_split_study_FR.docx
examples/habs_round1_2026/: GAME4_LIVE_RUNBOOK.md  README.md  arber_special.py  build_arber_special_post.js  build_g5_morning_after_special_post.js  build_game3_post.js  build_game4_p1_post.js  build_game4_periods_post.js  build_game4_post.js  build_game4_pregame.js  build_game4_slaf_hit_post.js  build_game5_postgame_post.js  build_game5_pregame_post.js  build_game5_slaf_options_post.js  build_playoff_rankings_post.js  g5_morning_after_special.py  game1_context.yaml  game2_context.yaml  game3_analysis.numbers.json  game3_analysis.py  game3_context.yaml  game3_lineups.yaml  game3_post_2026-04-25_EN.docx  game3_post_2026-04-25_EN_v2.docx  game4_analysis.py  (+44 more)
legacy/: README.md  app.py  config.py
research/: 2025030124_claims.yaml
tools/: BUILD_SCOUTING_CORPUS_RUNBOOK.md  README.md  backtest_comparable_aging.py  build_comparable_index.py  build_game_context.py  build_goalie_comparable_index.py  build_goalie_scouting_corpus.py  build_scouting_corpus.py  dump_suzuki.py  export_derived_artifacts.py  player_snapshot.py  push_to_drive.py  qc_scouting_corpus.py  refresh_edge_biometrics.py  refresh_goalie_stats.py  refresh_scouting_empties.py  refresh_skater_individual_stats.py  render_cohort_study.py  score_calibration.py  seed_scouting_corpus.py
(+43 files in other folders)
